--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<li><a href="https://www.youtube.com/channel/UCun5lUZm1aKvD2OP9K-F-fQ" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 								<li><a href="https://www.instagram.com/asma_band/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://open.spotify.com/artist/4w3wnRkZWlR7QWcbDSYjfV?si=IVALCAQIRfCrlwNr5Y-GUw&dl_branch=1" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:asmaband5@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 					</section>
